crates/parser/src/snapshots/parser__tests__parse_inline_err@0057_let_rec_ded_no_binding.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec {  } (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0057_let_rec_ded_no_binding.ath
---
INFIX_LET_REC_DED
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "  "
  R_CURLY "}"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        NAME_REF
          IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"
error 8: Expected to find at least one binding for the letrec expression

