crates/parser/src/snapshots/parser__tests__parse_inline_err@0058_try_ded_no_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "try { (!claim A) |  }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0058_try_ded_no_ded.ath
---
TRY_DED
  TRY_KW "try"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  TRY_DED_ARM
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "A"
      R_PAREN ")"
  WHITESPACE " "
  TRY_DED_ARM
    PIPE "|"
  WHITESPACE "  "
  R_CURLY "}"
  WHITESPACE "\n"
error 18: Expected to find an expression for the try arm

