crates/parser/src/snapshots/parser__tests__parse_inline_err@0059_try_ded_no_arm.ath.snap
---
source: crates/parser/src/tests.rs
description: "try {  }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0059_try_ded_no_arm.ath
---
TRY_DED
  TRY_KW "try"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "  "
  R_CURLY "}"
  WHITESPACE "\n"
error 7: Expected to find at least one arm for the try block

