crates/parser/src/snapshots/parser__tests__parse_inline_err@0061_proof_by_contra_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "suppose-absurd A\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0061_proof_by_contra_no_body.ath
---
PROOF_BY_CONTRA_DED
  SUPPOSE_ABSURD_KW "suppose-absurd"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "A"
  WHITESPACE "\n"
error 16: expected body for proof by contradiction

