crates/parser/src/snapshots/parser__tests__parse_inline_err@0062_generalize_over_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "generalize-over\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0062_generalize_over_no_expr.ath
---
GENERALIZE_OVER_DED
  GENERALIZE_OVER_KW "generalize-over"
  WHITESPACE "\n"
error 15: expected expression in generalize over binding
error 15: expected body for generalize over

