crates/parser/src/snapshots/parser__tests__parse_inline_err@0063_pick_any_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-any a : Int\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0063_pick_any_no_body.ath
---
PICK_ANY_DED
  PICK_ANY_KW "pick-any"
  WHITESPACE " "
  TYPED_PARAM
    IDENTIFIER
      IDENT "a"
      WHITESPACE " "
    COLON ":"
    WHITESPACE " "
    IDENT_SORT
      IDENTIFIER
        IDENT "Int"
        WHITESPACE "\n"
error 17: expected body for pick any

